Use Integer object cache